# neural-network-raylib-c

./: .gitignore  CMakeLists.txt  README.md  Taskfile.yml  main.c  requirements.txt  train.py
